--- a/src/sass/components/_notification.scss
+++ b/src/sass/components/_notification.scss
@@ -1,5 +1,6 @@
 .notification {
   position: relative;
+  height: 100%;
 
   &__status {
     position: absolute;
@@ -21,5 +22,11 @@
     &--busy {
       background-color: $color-warning;
     }
+  }
+}
+
+@media only screen and (min-width: $mobile) and (min-height: $sidebar-max) {
+  .notification {
+    height: auto;
   }
 }
