--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -2,11 +2,17 @@
   background-color: $color-dark;
 
   &__section {
-    padding: $padding-text/4 0 $padding-text/2 0;
+    @include flex (row, center, space-between);
+    padding: $padding-text/4 0;
     border-bottom: $border-style $color-header;
+    flex-wrap: wrap;
 
     &--first {
-      padding-top: 0;
+      padding: 0;
+    }
+
+    &--left {
+      justify-content: left;
     }
 
     &__title {
@@ -16,29 +22,31 @@
   }
 
   &__menu-item {
-    display: block;
+    flex: 1 1 auto;
+    text-align: center;
     line-height: $single-line-height - 5px;
-    padding: 0 $padding-text;
+    padding: 0 $padding-text/2;
     border-left: 5px solid transparent;
     color: $color-header;
+    width: 100%;
 
     &:hover {
-      background-color: transparentize($color-greys-d, 0.8);
       color: $color-light;
-    }
-
-    span {
-      padding-left: $padding-sm;
-      line-height: $single-line-height - 3px;
+      background-color: transparentize($color-greys-d, 0.8);
     }
 
     i {
       font-size: $size-icon - 2;
+      display: none;
     }
 
     &--active {
-      border-color: $color-warning;
+      color: $color-warning;
       background-color: transparentize($color-greys-d, 0.8);
+
+      &:hover {
+        color: $color-warning;
+      }
     }
 
   }
@@ -46,11 +54,21 @@
   &__manager {
     padding: $padding-text/4 $padding-text/2;
     @include flex (row, center, flex-start);
+    height: $single-line-height - 5px;
 
     img {
       padding-right: $padding-text/2;
+      height: 100%;
     }
 
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-height: 420px) {
+  .sidebar {
+    &__menu-item {
+      width: auto;
+    }
   }
 }
 
@@ -58,22 +76,37 @@
   .sidebar {
     &__section {
       padding: $padding-text/2 0 $padding-text 0;
+
+      &--first {
+        padding-bottom: inherit;
+      }
     }
 
     &__menu-item {
+      padding: 0 $padding-text;
+      text-align: left;
+      display: block;
       line-height: $single-line-height;
+
+      &--active {
+        border-color: $color-warning;
+        background-color: transparentize($color-greys-d, 0.8);
+      }
 
       i {
         font-size: $size-icon;
+        display: initial;
       }
 
       span {
-        line-height: $single-line-height;
+        display: inline;
+        padding-left: $padding-sm;
       }
     }
 
     &__manager {
       padding: $padding-text/2 $padding-text;
+      height: auto;
     }
   }
 }
