--- a/src/sass/components/_top-bar.scss
+++ b/src/sass/components/_top-bar.scss
@@ -1,15 +1,16 @@
 .top-bar {
+  @include flex (row, center, space-between);
+  flex-wrap: wrap;
+
   &__button {
-    @extend .sidebar__section;
     @include flex (row, center, space-evenly);
     padding-bottom: $padding-text/4;
-    border-top: none;
-    border-right: none;
-    border-left: none;
+    border: none;
     font-weight: $font-regular;
     background-color: inherit;
     outline: none;
-    width: 100%;
+    flex: 1 1 auto;
+    min-width: $single-line-height - 5px;
 
     &:hover {
       background-color: transparentize($color-greys-d, 0.8);
@@ -54,8 +55,8 @@
       padding: 0 $padding-sm;
       height: 100%;
       border-left: $border-style $color-greys-l;
-      border-bottom: none;
-      width: auto;
+      flex: 0 0 auto;
+      // line-height: $size-top-bar;
 
       &:hover {
         background-color: $color-greys-xl;
